[package]
name = "geyser_neon"
version = "0.1.0"
edition = "2021"
description = "Neon geyser plugin"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
bytemuck = "1.12.1"
flume = "0.10.14"
chrono = { version = "0.4.22", features = ["serde"] }
log = "0.4.17"
fast_log = { version = "1.5.42" }
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
solana-geyser-plugin-interface = { version = "=1.11.10" }
solana-logger = { version = "=1.11.10" }
solana-measure = { version = "=1.11.10" }
solana-metrics = { version = "=1.11.10" }
solana-runtime = { version = "=1.11.10" }
solana-sdk = { version = "=1.11.10" }
thiserror = "1.0.35"
tokio = { version = "1.21.2", features = ["full"] }
kafka_common = { path = "../kafka_common" }
rdkafka = { version = "0.28.0", features = ["cmake-build"] }
blake3 = "1.3.1"
