[package]
name = "geyser_neon"
version = "1.0.0"
edition = "2021"
description = "Neon geyser plugin"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
bytemuck = "1.12.3"
flume = "0.10.14"
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4.17"
fast_log = { version = "1.5.45" }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
solana-geyser-plugin-interface = { version = "=1.14.7" }
solana-logger = { version = "=1.14.7" }
solana-measure = { version = "=1.14.7" }
solana-metrics = { version = "=1.14.7" }
solana-runtime = { version = "=1.14.7" }
solana-sdk = { version = "=1.14.7" }
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"] }
kafka_common = { path = "../kafka_common" }
rdkafka = { version = "0.29.0", features = ["cmake-build", "ssl", "sasl" , "zstd", "libz-static"] }
blake3 = "1.3.2"
build-info = { git = "https://github.com/danielschemmel/build-info", rev = "8d6e7e95d5ae046591e3c0d4ae16fdaba79b3cc7" }

[build-dependencies]
build-info-build = { git = "https://github.com/danielschemmel/build-info", rev = "8d6e7e95d5ae046591e3c0d4ae16fdaba79b3cc7" }
