[package]
name = "geyser_neon"
version = "1.0.0"
edition = "2021"
description = "Neon geyser plugin"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
bytemuck = "1.12.3"
flume = "0.10.14"
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4.17"
fast_log = { version = "1.5.51" }
serde = "1.0.150"
serde_derive = "1.0.150"
serde_json = "1.0.91"
solana-geyser-plugin-interface = { version = "=1.14.10" }
solana-logger = { version = "=1.14.10" }
solana-measure = { version = "=1.14.10" }
solana-metrics = { version = "=1.14.10" }
solana-runtime = { version = "=1.14.10" }
solana-sdk = { version = "=1.14.10" }
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full"] }
kafka_common = { path = "../kafka_common" }
rdkafka = { version = "0.29.0", features = ["cmake-build", "ssl", "sasl" , "zstd", "libz-static"] }
blake3 = "1.3.3"
build-info = { git = "https://github.com/danielschemmel/build-info", rev = "8d6e7e95d5ae046591e3c0d4ae16fdaba79b3cc7" }
prometheus-client = "0.18.1"
hyper = { version = "0.14.23", features = ["server", "http1", "tcp"] }

[build-dependencies]
build-info-build = { git = "https://github.com/danielschemmel/build-info", rev = "8d6e7e95d5ae046591e3c0d4ae16fdaba79b3cc7" }
