[package]
name = "kafka_common"
version = "0.1.0"
edition = "2021"
description = "Neon geyser plugin common structs"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[dependencies]
solana-geyser-plugin-interface = { version = "=1.13.4" }
solana-sdk = { version = "=1.13.4" }
solana-transaction-status = {version = "=1.13.4"}
solana-program = { version = "=1.13.4" }
solana-account-decoder= { version = "=1.13.4" }

chrono = "0.4.22"
serde = "1.0.147"
serde_with = "2.0.1"
serde_derive = "1.0.147"
blake3 = "1.3.1"
