[package]
name = "kafka_common"
version = "0.1.0"
edition = "2021"
description = "Neon geyser plugin common structs"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[dependencies]
solana-geyser-plugin-interface = { version = "=1.14.7" }
solana-sdk = { version = "=1.14.7" }
solana-transaction-status = {version = "=1.14.7"}
solana-program = { version = "=1.14.7" }
solana-account-decoder= { version = "=1.14.7" }

chrono = "0.4.23"
serde = "1.0.148"
serde_with = "2.1.0"
serde_derive = "1.0.147"
blake3 = "1.3.2"
