[package]
name = "kafka_common"
version = "0.1.0"
edition = "2021"
description = "Neon geyser plugin common structs"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[dependencies]
solana-geyser-plugin-interface = { version = "=1.14.10" }
solana-sdk = { version = "=1.14.10" }
solana-transaction-status = {version = "=1.14.10"}
solana-program = { version = "=1.14.10" }
solana-account-decoder= { version = "=1.14.10" }

chrono = "0.4.23"
serde = "1.0.151"
serde_with = "2.1.0"
serde_derive = "1.0.150"
blake3 = "1.3.3"
